--- a/src/solvers/eigen/CMakeLists.txt
+++ b/src/solvers/eigen/CMakeLists.txt
@@ -5,10 +5,8 @@ SET(EIGEN_SRC
   ${SRC_DIR}/EigenArnoldi.cc
   ${SRC_DIR}/EigenPI.cc
   ${SRC_DIR}/EigenDiffusion.cc
+  ${SRC_DIR}/EigenGD.cc
   ${SRC_DIR}/EnergyIndependentEigenOperator.cc
+  ${SRC_DIR}/EnergyDependentEigenLHS.cc
   PARENT_SCOPE
 )
-
-# Install
-INSTALL_FILES(/include/solvers/wg .hh)
-
