--- a/src/solvers/test/CMakeLists.txt
+++ b/src/solvers/test/CMakeLists.txt
@@ -108,3 +108,9 @@ TARGET_LINK_LIBRARIES(test_TWIGL            solvers)
 ADD_EXECUTABLE(test_Ruby            test_Ruby.cc)
 TARGET_LINK_LIBRARIES(test_Ruby   	solvers)
 ADD_TEST(test_Ruby             		test_Ruby 0)
+
+
+ADD_EXECUTABLE(test_1D_transient            test_1D_transient.cc)
+TARGET_LINK_LIBRARIES(test_1D_transient   	solvers)
+ADD_TEST(test_1D_transient            		test_1D_transient 0)
+
