--- a/src/solvers/test/CMakeLists.txt
+++ b/src/solvers/test/CMakeLists.txt
@@ -114,3 +114,8 @@ ADD_EXECUTABLE(test_1D_transient            test_1D_transient.cc)
 TARGET_LINK_LIBRARIES(test_1D_transient   	solvers)
 ADD_TEST(test_1D_transient            		test_1D_transient 0)
 
+ADD_EXECUTABLE(test_1D_matrix            test_1D_matrix.cc)
+TARGET_LINK_LIBRARIES(test_1D_matrix   	 solvers)
+ADD_TEST(test_1D_matrix            		 test_1D_matrix 0)
+
+
