renamed class and added missing members

--- a/src/solvers/rom/CMakeLists.txt
+++ b/src/solvers/rom/CMakeLists.txt
@@ -1,6 +1,6 @@
 # Set source
 SET(SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR})
 SET(ROM_SRC
-  ${SRC_DIR}/Basis.cc
+  ${SRC_DIR}/ROMBasis.cc
   PARENT_SCOPE
 )
