--- a/src/solvers/rom/CMakeLists.txt
+++ b/src/solvers/rom/CMakeLists.txt
@@ -2,5 +2,6 @@
 SET(SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR})
 SET(ROM_SRC
   ${SRC_DIR}/ROMBasis.cc
+  ${SRC_DIR}/ProjectedOperator.cc
   PARENT_SCOPE
 )
