"modefied cmake list"

--- a/src/solvers/rom/CMakeLists.txt
+++ b/src/solvers/rom/CMakeLists.txt
@@ -2,7 +2,7 @@
 SET(SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR})
 SET(ROM_SRC
   ${SRC_DIR}/ROMBasis.cc
-  ${SRC_DIR}/ProjectedOperator.cc
-  ${SRC_DIR}/ROM_Manager.cc
+  ${SRC_DIR}/OperatorProjection.cc
+  ${SRC_DIR}/ROMSolver.cc
   PARENT_SCOPE
 )
