added the transient rom script and test to cmake lists

--- a/src/solvers/rom/CMakeLists.txt
+++ b/src/solvers/rom/CMakeLists.txt
@@ -4,5 +4,7 @@ SET(ROM_SRC
   ${SRC_DIR}/ROMBasis.cc
   ${SRC_DIR}/OperatorProjection.cc
   ${SRC_DIR}/ROMSolver.cc
+  ${SRC_DIR}/Kinetic_Mat.cc
+  ${SRC_DIR}/TransientSolver.cc
   PARENT_SCOPE
 )
