chenged to the transient test

--- a/src/solvers/test/CMakeLists.txt
+++ b/src/solvers/test/CMakeLists.txt
@@ -118,3 +118,7 @@ TARGET_LINK_LIBRARIES(test_ROMSolver     solvers)
 ADD_TEST(test_ROM_diffusion               test_ROMSolver 0)
 ADD_TEST(test_ROM_EnergyIndependent       test_ROMSolver 1)
 ADD_TEST(test_ROM_EnergyDependent         test_ROMSolver 2)
+
+ADD_EXECUTABLE(test_TransientROMSolver         	 test_TransientROMSolver.cc)
+TARGET_LINK_LIBRARIES(test_TransientROMSolver    	solvers)
+ADD_TEST(test_TransientROMSolver                  test_TransientROMSolver   0)
