Implemented a sparse row class to help ILUT dev

--- a/src/callow/test/CMakeLists.txt
+++ b/src/callow/test/CMakeLists.txt
@@ -11,6 +11,9 @@ ADD_TEST(test_Vector                    test_Vector 0)
 ADD_EXECUTABLE(test_Matrix              test_Matrix.cc)
 TARGET_LINK_LIBRARIES(test_Matrix       callow )
 ADD_TEST(test_Matrix                    test_Matrix 0)
+ADD_EXECUTABLE(test_SparseRow           test_SparseRow.cc)
+TARGET_LINK_LIBRARIES(test_SparseRow    callow )
+ADD_TEST(test_SparseRow                 test_SparseRow 0)
 #
 ADD_EXECUTABLE(test_MatrixShell         test_MatrixShell.cc)
 TARGET_LINK_LIBRARIES(test_MatrixShell  callow )
@@ -54,4 +57,3 @@ ADD_TEST(test_PCILU0                        test_Preconditioners  1)
 #TARGET_LINK_LIBRARIES(test_Threading        callow )
 #ADD_TEST(test_ThreadedMatVec                test_Threading  0)
 #ADD_TEST(test_ThreadedJacobi                test_Threading  1)
-
