--- a/src/callow/matrix/CMakeLists.txt
+++ b/src/callow/matrix/CMakeLists.txt
@@ -1,13 +1,13 @@
 # Set source
 SET(SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR})
 SET(MATRIX_SRC
-  ${SRC_DIR}/MatrixBase.cc 
+  ${SRC_DIR}/MatrixBase.cc
   ${SRC_DIR}/Matrix.cc
   ${SRC_DIR}/MatrixShell.cc
   ${SRC_DIR}/MatrixDense.cc
+  ${SRC_DIR}/SparseRow.cc
   PARENT_SCOPE
 )
 
 # Install
 INSTALL_FILES(/include/callow/matrix .hh)
-
