Last of the shared ptr issues for this build config anyway

--- a/src/solvers/rom/CMakeLists.txt
+++ b/src/solvers/rom/CMakeLists.txt
@@ -1,8 +1,8 @@
 # Set source
-SET(SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR})
-SET(ROM_SRC
-  ${SRC_DIR}/ROMBasis.cc
-  ${SRC_DIR}/OperatorProjection.cc
-  ${SRC_DIR}/ROMSolver.cc
-  PARENT_SCOPE
-)
+# SET(SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR})
+# SET(ROM_SRC
+#   ${SRC_DIR}/ROMBasis.cc
+#   ${SRC_DIR}/OperatorProjection.cc
+#   ${SRC_DIR}/ROMSolver.cc
+#   PARENT_SCOPE
+# )
