--- a/src/solvers/test/CMakeLists.txt
+++ b/src/solvers/test/CMakeLists.txt
@@ -105,9 +105,9 @@ TARGET_LINK_LIBRARIES(test_TWIGL            solvers)
 #ADD_TEST(test_MGCMFD             		test_MGCMFD 0)
 
 
-ADD_EXECUTABLE(test_Basis          	test_Basis.cc)
-TARGET_LINK_LIBRARIES(test_Basis  	solvers)
-ADD_TEST(test_Basis             	test_Basis 0)
+# ADD_EXECUTABLE(test_Basis          	test_Basis.cc)
+# TARGET_LINK_LIBRARIES(test_Basis  	solvers)
+# ADD_TEST(test_Basis             	test_Basis 0)
 
 # ADD_EXECUTABLE(test_ProjectedOperator          	 test_ProjectedOperator.cc)
 # TARGET_LINK_LIBRARIES(test_ProjectedOperator   	solvers)
