--- a/src/solvers/test/CMakeLists.txt
+++ b/src/solvers/test/CMakeLists.txt
@@ -113,6 +113,6 @@ TARGET_LINK_LIBRARIES(test_TWIGL            solvers)
 # TARGET_LINK_LIBRARIES(test_ProjectedOperator   	solvers)
 # ADD_TEST(test_ProjectedOperator                  test_ProjectedOperator  0)
 
-ADD_EXECUTABLE(test_SlabReactor       	 test_SlabReactorTransient.cc)
-TARGET_LINK_LIBRARIES(test_SlabReactor   solvers)
-ADD_TEST(test_SlabReactor                test_SlabReactor 0)
+#ADD_EXECUTABLE(test_SlabReactor       	 test_SlabReactorTransient.cc)
+#TARGET_LINK_LIBRARIES(test_SlabReactor   solvers)
+#ADD_TEST(test_SlabReactor                test_SlabReactor 0)
