Small cosmetic changes.  Moved mesh-to-geo to a Geometry constructor (from Tracker, which needs to be simplified)

--- a/src/geometry/test/CMakeLists.txt
+++ b/src/geometry/test/CMakeLists.txt
@@ -65,3 +65,7 @@ ADD_TEST(test_RegionFactory_PinCell         test_RegionFactory 0)
 ADD_EXECUTABLE(test_Region                  test_Region.cc)
 TARGET_LINK_LIBRARIES(test_Region           geometry utilities angle)
 ADD_TEST(test_Region                        test_Region 0)
+
+ADD_EXECUTABLE(test_Geometry                test_Geometry.cc)
+TARGET_LINK_LIBRARIES(test_Geometry         geometry utilities angle)
+ADD_TEST(test_Geometry                      test_Geometry 0)
