--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -89,6 +89,16 @@ endif()
 # EXTERNAL LIBRARIES
 #------------------------------------------------------------------------------#
 
+include(FetchContent)
+FetchContent_Declare(
+  googletest
+  URL https://github.com/google/googletest/archive/03597a01ee50ed33e9dfd640b249b4be3799d395.zip
+)
+# For Windows: Prevent overriding the parent project's compiler/linker settings
+set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+FetchContent_MakeAvailable(googletest)
+include(GoogleTest)
+
 if(DETRAN_ENABLE_PYTHON)
   if(BUILD_SHARED_LIBS)
     find_package(SWIG REQUIRED)
