updated angle tests to use google test, updated formatting, and updated some formatting on the utilities tests

--- a/src/angle/test/CMakeLists.txt
+++ b/src/angle/test/CMakeLists.txt
@@ -2,36 +2,22 @@
 # libdetran/src/angle/test/CMakeLists.txt
 #------------------------------------------------------------------------------#
 
-#------------------------------------------------------------------------------#
-# Create test executables
-#------------------------------------------------------------------------------#
+macro(test)
+  add_executable(${ARGV0} ${ARGV0}.cc)
+  target_link_libraries(${ARGV0}
+    angle
+    GTest::gtest_main
+  )
+  gtest_discover_tests(${ARGV0})
+endmacro()
 
-ADD_EXECUTABLE(test_MomentToDiscrete        test_MomentToDiscrete.cc)
-TARGET_LINK_LIBRARIES(test_MomentToDiscrete angle)
-
-ADD_EXECUTABLE(test_MomentIndexer           test_MomentIndexer.cc)
-TARGET_LINK_LIBRARIES(test_MomentIndexer    angle)
-ADD_TEST(test_MomentIndexer_1D              test_MomentIndexer      0)
-ADD_TEST(test_MomentIndexer_1D              test_MomentIndexer      1)
-ADD_TEST(test_MomentIndexer_1D              test_MomentIndexer      2)
-
-ADD_EXECUTABLE(test_SphericalHarmonics        test_SphericalHarmonics.cc)
-TARGET_LINK_LIBRARIES(test_SphericalHarmonics angle)
-
-ADD_EXECUTABLE(test_ProductQuadratures        test_ProductQuadratures.cc)
-TARGET_LINK_LIBRARIES(test_ProductQuadratures angle)
-
-ADD_EXECUTABLE(test_BaseQuadrature          test_BaseQuadrature.cc)
-TARGET_LINK_LIBRARIES(test_BaseQuadrature   angle)
-ADD_TEST(test_BaseQuadrature_GL             test_BaseQuadrature      0)
-
-ADD_EXECUTABLE(test_PolarQuadrature         test_PolarQuadrature.cc)
-TARGET_LINK_LIBRARIES(test_PolarQuadrature  angle)
-ADD_TEST(test_PolarQuadrature_basic         test_PolarQuadrature      0)
-
-#------------------------------------------------------------------------------#
-# Define tests
-#------------------------------------------------------------------------------#
-
-ADD_TEST(test_MomentToDiscrete      test_MomentToDiscrete   0)
-ADD_TEST(test_SphericalHarmonics    test_SphericalHarmonics 0)
+test(test_BaseQuadrature)
+#test(test_Collocated)
+test(test_MomentIndexer)
+test(test_MomentToDiscrete)
+test(test_PolarQuadrature)
+test(test_ProductQuadratures)
+#test(test_QuadrupleRange)
+test(test_SphericalHarmonics)
+#test(test_TabuchiYamamoto)
+#test(test_Uniform)
