updated material tests to gtest

--- a/src/material/test/CMakeLists.txt
+++ b/src/material/test/CMakeLists.txt
@@ -1,17 +1,10 @@
-#------------------------------------------------------------------------------#
-# libdetran/src/material/test/CMakeLists.txt
-#------------------------------------------------------------------------------#
+macro(test)
+  add_executable(${ARGV0} ${ARGV0}.cc)
+  target_link_libraries(${ARGV0}
+    material utilities
+    GTest::gtest_main
+  )
+  gtest_discover_tests(${ARGV0})
+endmacro()
 
-#------------------------------------------------------------------------------#
-# Create test executables
-#------------------------------------------------------------------------------#
-
-ADD_EXECUTABLE(test_Material test_Material.cc)
-TARGET_LINK_LIBRARIES(test_Material material utilities)
-
-#------------------------------------------------------------------------------#
-# Define tests
-#------------------------------------------------------------------------------#
-
-ADD_TEST( test_Material_basic  test_Material 0)
-ADD_TEST( test_Material_bounds test_Material 1)
+test(test_Material)
