--- a/src/boundary/test/CMakeLists.txt
+++ b/src/boundary/test/CMakeLists.txt
@@ -1,24 +1,15 @@
 #------------------------------------------------------------------------------#
 # src/boundary/test/CMakeLists.txt
 #------------------------------------------------------------------------------#
+macro(test)
+  add_executable(${ARGV0} ${ARGV0}.cc)
+  target_link_libraries(${ARGV0}
+    boundary
+    GTest::gtest_main
+  )
+  gtest_discover_tests(${ARGV0})
+endmacro()
 
-#------------------------------------------------------------------------------#
-# Create test executables
-#------------------------------------------------------------------------------#
-
-ADD_EXECUTABLE(test_BoundarySN                  test_BoundarySN.cc)
-TARGET_LINK_LIBRARIES(test_BoundarySN           boundary)
-
-ADD_EXECUTABLE(test_BoundaryMOC                 test_BoundaryMOC.cc)
-TARGET_LINK_LIBRARIES(test_BoundaryMOC          boundary)
-
-ADD_EXECUTABLE(test_BoundaryDiffusion           test_BoundaryDiffusion.cc)
-TARGET_LINK_LIBRARIES(test_BoundaryDiffusion    boundary)
-
-#------------------------------------------------------------------------------#
-# Define tests
-#------------------------------------------------------------------------------#
-
-ADD_TEST(test_BoundarySN            test_BoundarySN         0)
-ADD_TEST(test_BoundaryMOC           test_BoundaryMOC        0)
-ADD_TEST(test_BoundaryDiffusion     test_BoundaryDiffusion  0)
+test(test_BoundaryDiffusion)
+test(test_BoundaryMOC)
+test(test_BoundarySN)
